# Chavost

./: .gitlab-ci.yml  README.md  pyproject.toml
data/: base_cryptee.csv  doc
data/tests/: test_main.py
src/: main.py
src/interface/: app.py
src/tests/: test_main.py
src/utils/: aliases.py  fichier_R_2_engineer.R
