[project]
name = "chavost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lint>=1.2.1",
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
]

# uv run shortcuts
[project.scripts]
# run the app
main = "python:src/main.py"
# code quality
precommit = "src.utils.aliases:precommit"
lint = "src.utils.aliases:precommit"
typecheck = "src.utils.aliases:typecheck"
audit = "src.utils.aliases:audit"